tests/errors/fixed_form_1.f
      program X
      xinteger :: y
      y = 5
500   print *, y
      end program
